test/config/security/authorization_service.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: serving-tests
  labels:
    test.knative.dev/dependency: istio-sidecar
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-namespaces
  namespace: serving-tests
  labels:
    test.knative.dev/dependency: istio-sidecar
spec:
  action: ALLOW
  rules:
  - from:
    - source:
       # This is necessary for conformance/ingress tests.
       # Non knative services access to services from ingress-gateway in istio-system.
       namespaces: ["knative-serving", "istio-system"]
